--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 				frame.width += Math.max.apply(Math, rowWidths);
 
 				// now that we have the dimensions, we need to increase/decrease them to fit as closely as possible to the canvas size
-				/*var widthDifference = canvas.width - Math.round(frame.width),
+				var widthDifference = canvas.width - Math.round(frame.width),
 					heightDifference = canvas.height - Math.round(frame.height),
 					allowableDifference = 5;
 				if((widthDifference < -allowableDifference) || (heightDifference < -allowableDifference)){
@@ -315,7 +315,7 @@
 
 					// force a re-calculation of the frame sizes
 					calculateSizes();
-				}*/
+				}
 			};
 
 			/**
@@ -381,15 +381,15 @@
 					// top
 					length = 0;
 					for(count = 0; length < frame.width; count++){
-						ctx.drawImage(file, y1, Math.floor(x1 + (frameHeight*count)), thickness, frameHeight);
-						length += frameHeight;
+						ctx.drawImage(file, y1, Math.floor(x1 + ((frameHeight-1)*count)), thickness, frameHeight);
+						length += frameHeight-1;
 					}
 					ctx.rotate(-degrees*2);
 					// bottom
 					length = 0;
 					for(count = 0; length < frame.width; count++){
-						ctx.drawImage(file, y1, Math.floor(x1 + (frameHeight*count)), thickness, frameHeight);
-						length += frameHeight;
+						ctx.drawImage(file, y1, Math.floor(x1 + ((frameHeight-1)*count)), thickness, frameHeight);
+						length += frameHeight-1;
 					}
 					ctx.rotate(degrees);
 					ctx.restore();
@@ -469,16 +469,16 @@
 				// calculate the starting x/y coordinates
 				var x1 = (typeof x == 'number') ? x : -(width/2),
 					y1 = (typeof y == 'number') ? y : -(height/2),
-					x2 = x1 + width,
-					y2 = y1 + height;
+					x2 = x1 + width + (mount.innerBorderPx*2),
+					y2 = y1 + height + (mount.innerBorderPx*2);
 
 				// fill the image section
 				ctx.fillStyle = '#efefef';
-				ctx.fillRect(x1+mount.innerBorderPx, y1+mount.innerBorderPx, x2-x1-mount.innerBorderPx, y2-y1-mount.innerBorderPx);
+				ctx.fillRect(x1+mount.innerBorderPx, y1+mount.innerBorderPx, width, height);
 
 				// draw the image (if one exists)
 				if(typeof image == 'object'){
-					//ctx.drawImage(image, x1, y1, width, height);
+					ctx.drawImage(image, x1+mount.innerBorderPx, y1+mount.innerBorderPx, width, height);
 				}
 
 				ctx.lineWidth = 1;
@@ -547,8 +547,6 @@
 				}
 
 
-				ctx.fillStyle = '#f00';
-				ctx.fillRect(-width/2, -height/2, width, height);
 				// now loop through (again) and output the photos
 				yOffset = -height/2;
 				for(i in mount.sections){
@@ -563,7 +561,7 @@
 						count++;
 					}
 
-					yOffset += dimensions[i].height + mount.borderPx + (mount.innerBorderPx*2);
+					yOffset += dimensions[i].height + mount.borderPx;
 				}
 
 
