--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 
 		canvas#testCanvas{
 			display:block;
-			width:100%;
+			margin:0 auto;
+			width:350px;
 			min-width:60px;
-			height:100%;
+			height:354px;
 			min-height:60px;
+			cursor:pointer;
 		}
 	</style>
 
@@ -52,7 +54,7 @@
 	<script>
 		$(window).load(function(){
 			// this fixes the width and height in ie
-			$('#testCanvas').width('100%').height('100%');
+			//$('#testCanvas').width('100%').height('100%');
 
 			var myFrame = new Frame({
 				canvas:$('#testCanvas'),
@@ -65,8 +67,15 @@
 					thickness:30
 				},
 				mount:{
-					file:'04.png',
-					color:'#efece1',
+					//file:'04.png',
+					//color:'#efece1',
+					border:{
+						top:150,
+						bottom:50,
+						left:50,
+						right:150
+					},
+					imagePadding:50,
 					sections:[
 						[
 							{
@@ -98,20 +107,20 @@
 						],
 						[
 							{
-								width:100,
-								height:100
+								width:200,
+								height:300
 							}
 						]
 					]
 				},
 				photos:[
-					'photo.jpg',
+					/*'photo.jpg',
 					'photo2.jpg',
 					'photo.jpg',
 					'photo2.jpg',
-					'photo.jpg',
-					'photo2.jpg',
-					'photo.jpg'
+					'photo.jpg',*/
+					'photo2.jpg'
+					//'photo.jpg'
 				]
 			});
 		});
