--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 							}
 						],
 						[
-							{
+							/*{
 								width:100,
 								height:100
 							},
 							{
 								width:100,
 								height:100
-							},
+							},*/
 							{
 								width:100,
 								height:100
@@ -114,13 +114,13 @@
 					]
 				},
 				photos:[
-					/*'photo.jpg',
+					'photo.jpg',
 					'photo2.jpg',
 					'photo.jpg',
 					'photo2.jpg',
-					'photo.jpg',*/
-					'photo2.jpg'
-					//'photo.jpg'
+					'photo.jpg',
+					'photo2.jpg',
+					'photo.jpg'
 				]
 			});
 		});
