Closes #15 Adds row/column padding to images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						left:50,
 						right:150
 					},
-					imagePadding:50,
+					imagePadding:{row:50, column:75},
 					sections:[
 						[
 							{
