--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		canvas#testCanvas{
 			display:block;
 			margin:0 auto;
-			width:350px;
+			width:100%;
 			min-width:60px;
-			height:354px;
+			height:100%;
 			min-height:60px;
 			cursor:pointer;
 		}
@@ -54,7 +54,7 @@
 	<script>
 		$(window).load(function(){
 			// this fixes the width and height in ie
-			//$('#testCanvas').width('100%').height('100%');
+			$('#testCanvas').width('100%').height('100%');
 
 			var myFrame = new Frame({
 				canvas:$('#testCanvas'),
