Adds ability to specify mount layer line colour
Also changes all variables of 'colour' to American spelling of 'color', so that it is more standardised.

Forces mount layers (if more than 1 layer), to have a background colour, otherwise other layers show through.

--- a/index.html
+++ b/index.html
@@ -59,42 +59,40 @@
 			var myFrame = new Frame({
 				//autoResize:false,
 				canvas:$('#testCanvas'),
-				/*frame:{
+				frame:{
 					file:'frame1.jpg',
 					thickness:30
 				},
 				slip:{
 					file:'frame1.png',
 					thickness:30
-				},*/
+				},
 				mount:{
-					//file:'04.png',
-					//color:'#efece1',
-					//border:50,
 					layers:[
 						{
 							file:'04.png',
-							color:'#efece1',
+							//color:'#efece1',
 							padding:{top:50,bottom:50,left:75,right:50}
 						},
 						{
-							colour:'#0f0',
+							color:'#0f0',
 							padding:10
 						},
 						{
-							colour:'#00f',
+							color:'#00f',
 							padding:5
 						},
 						{
-							colour:'#0ff',
+							//color:'#0ff',
 							padding:2
 						},
 						{
-							colour:'#ea0',
+							color:'#ea0',
 							padding:2
 						},
 						{
-							colour:'#f0f',
+							file:'04.png',
+							color:'#f0f',
 							padding:10
 						}
 					],
