Refs #18 - adds shading around mount layers
Also adds a colour shade generator, to help these functions.

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 				mount:{
 					layers:[
 						{
-							file:'04.png',
+							//file:'04.png',
 							//color:'#efece1',
 							padding:{top:50,bottom:50,left:75,right:50}
 						},
 						{
-							color:'#0f0',
+							//color:'#0f0',
 							padding:10
 						},
 						{
-							color:'#00f',
+							//color:'#00f',
 							padding:5
 						},
 						{
@@ -87,12 +87,12 @@
 							padding:2
 						},
 						{
-							color:'#ea0',
+							//color:'#ea0',
 							padding:2
 						},
 						{
-							file:'04.png',
-							color:'#f0f',
+							//file:'04.png',
+							//color:'#f0f',
 							padding:10
 						}
 					],
